2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/58_not_avec_int.deca
// Description :
//      Not ! devant int  
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération Not ! devant int  n'est pas valide
//
// Historique :
// cree le 10/01/2024

{
    ! 1 ;
}